# sdfer

./: Cargo.toml  README.md  index.html
.github/workflows/: ci.yml  pages.yml
src/: lib.rs  mesh_canvas.rs  render_canvas.rs  renderer.glsl  renderer.rs  script_engine.rs  script_ui.rs
src/object/: boolean.rs  boxes.rs  mod.rs  sphere.rs  transformations.rs
src/primitive/: boolean.rs  boxes.rs  cylinder.rs  mod.rs  plane.rs  repeat.rs  sphere.rs  torus.rs  transformations.rs  warp.rs
src/primitive/boolean/: min_function.rs  mod.rs  sdf_min.rs
