[package]
name = "sdfer"
version = "0.0.1"
authors = ["Henning Meyer <tutmann@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
shadercanvas = "0.0.10"
wasm-bindgen = "0.2.83"
log = "0.4"
console_log = { version = "0.2", features = ["color"], optional = true }
nalgebra = "0.31"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Event',
  'MouseEvent',
  'WheelEvent',
]

[features]
default = ["console_log"]
