[package]
name = "sdfer"
version = "0.0.1"
authors = ["Henning Meyer <tutmann@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
shadercanvas = "0.0.10"
wasm-bindgen = "0.2.83"
log = "0.4"
console_log = { version = "0.2", features = ["color"], optional = true }
nalgebra = "0.31"
getrandom = { features = [ "js" ] }  # required for rhai
rhai = { version = "1.11.0", features = ["only_i32", "f32_float", "no_closure", "no_custom_syntax"] }
parking_lot = { features = ["wasm-bindgen"]}
anyhow = "1.0"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Event',
  'HtmlButtonElement',
  'HtmlTextAreaElement',
  'MouseEvent',
  'WheelEvent',
]

[features]
default = ["console_log"]

[profile.release]
lto = "fat"         # turn on Link-Time Optimizations
codegen-units = 1   # trade compile time with maximum optimization
opt-level = "z"     # optimize for size