[package]
name = "sdfer"
version = "0.0.3"
authors = ["Henning Meyer <tutmann@gmail.com>"]
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
shadercanvas = "0.1.0"
wasm-bindgen = "0.2.114"
log = "0.4"
console_log = { version = "1.0", optional = true }
nalgebra-glm = "0.20"
getrandom = { version = "0.2", features = ["js"] }  # required for rhai
rhai = { version = "1.24.0", features = ["only_i32", "f32_float", "no_closure", "no_custom_syntax"] }
parking_lot = "0.12"
anyhow = "1.0"
array_tool = "1.0"
isosurface = "0.0.4"
js-sys = "0.3.91"

[dependencies.web-sys]
version = "0.3.91"
features = [
  'Document',
  'Event',
  'HtmlButtonElement',
  'HtmlCanvasElement',
  'HtmlTextAreaElement',
  'MouseEvent',
  'WheelEvent',
  'Window',
]

[features]
default = ["console_log"]

[profile.release]
lto = "fat"         # turn on Link-Time Optimizations
codegen-units = 1   # trade compile time with maximum optimization
opt-level = "z"     # optimize for size